# parallel-bfs

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  cmake_install.cmake
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
data/: 0minitest.in  README.md  parse_500.py  parse_samples.py
data/samples/: 1small.in  2med.in  3large.in  4huge.in
source/: bag  bag.cpp  bag.hpp  bag_query.cpp  bfs-parallel-main.cpp  bfs_main.cpp  debug.hpp  graph.cpp  graph.hpp  instrumentation.h  instrumentation.hpp  makefile  test.c
source/fr3632ho-s@power.cs.lth.se/: bag.cpp  cbt.cpp  instrumentation.hpp  makefile  printer_bag.py
source/fr3632ho-s@power.cs.lth.se/power8-folder/: lib.cpp
source/power8-folder/: bag.hpp  graph.cpp  graph.hpp
source/power8-folder/power8-folder/: bag.cpp  bag_query.cpp  bfs_main.cpp  bfsmain.out
test/: CMakeLists.txt
test/source/: bag_merge_1023_1.cpp  bag_merge_1023_1023.cpp  bag_merge_373_711.cpp  bag_merge_6_and_3.cpp  bag_merge_split_1023.cpp  bag_split_1023.cpp  bag_split_13.cpp  bag_split_16.cpp  bag_split_23.cpp  bag_split_many.cpp  bag_test.cpp  graph_execute_linear.cpp  parallel-bfs_test.cpp  pennant_iterate.cpp  pennant_split_64.cpp  pennants_test.cpp
